--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0"
-  }
+  },
+  "description": "![Design preview for the Todo app coding challenge](./design/desktop-preview.jpg)",
+  "main": "index.js",
+  "author": "",
+  "license": "ISC"
 }
